# gameonix-dc

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
src/: config.py  env.example  main.py
src/cogs/: __init__.py  dev.py  greet.py  role.py  test.py  tickets.py  utility.py
src/cogs/cmd/: __init__.py  tickets.py
src/cogs/events/: __init__.py  greet.py
src/core/: bot.py
src/core/ext/: __init__.py  colors.py  db.py  emoji.py  errors.py  helper.py  logger.py  permissions.py  ui.py
src/core/ext/models/: __init__.py  autorole.py  greet.py
